--- a/index.html
+++ b/index.html
@@ -20,11 +20,13 @@
                         </button>
                     </nav>
                 </div>
-                <div class="header__icon">
-                    <div class="logo">
-                        <img src="images/Group.png" alt="Logo">
+                <a href="">
+                    <div class="header__icon">
+                        <div class="logo">
+                            <img src="images/Group.png" alt="Logo">
+                        </div>
                     </div>
-                </div>
+                </a>
             </div>
             <div class="middlegroup">
                 <div class="header__call">
