almost done dropMenu, not done button styles yet

--- a/drop-menu.html
+++ b/drop-menu.html
@@ -48,8 +48,43 @@
         <li><a href="" 
             data-hover="Контакты">Контакты</a></li>
     </main>
-    <footer class="footer">
-
+    <footer class="dropMenu__footer">
+        <div class="dropMenu__footer__contact ">
+            <div class="dropMenu__footer__contact__icons middlegroup">
+                <div class="dropMenu__footer__contact__icons__phone">
+                    <button class="dropMenu__footer__contact__icons__phone__button">
+                        <img src="images/call.png" alt="call">
+                    </button>
+                </div>
+                <div class="dropMenu__footer__contact__icons__chat">
+                    <button class="dropMenu__footer__contact__icons__chat__button">
+                        <img src="images/chat.png" alt="chat">
+                    </button>
+                </div>
+                <div class="dropMenu__footer__contact__icons__contacts">
+                    <button class="dropMenu__footer__contact__icons__contacts__button">
+                        <img src="images/profile.png" alt="profile">
+                    </button>
+                </div>
+            </div>
+            <div class="dropMenu__footer__contact__email">
+                <a href="mailto:fedya2302@mail.ru?body=Привет&subject=CPS">mail@cps.com</a>
+            </div>
+            <div class="dropMenu__footer__contact__telephone">
+                <a href="tel:+88008908900">8 800 890 8900</a>
+            </div>
+        </div>
+        <div class="dropMenu__footer__lang">
+            <div class="dropMenu__footer__lang__RU">
+                <button class="dropMenu__footer__lang__RU__button grey">RU</button>
+            </div>
+            <div class="dropMenu__footer__lang__EN">
+                <button class="dropMenu__footer__lang__EN__button">EN</button>
+            </div>
+            <div class="dropMenu__footer__lang__CH">
+                <button class="dropMenu__footer__lang__CH__button">CH</button>
+            </div>
+        </div>
     </footer>
 </body>
 </html>
