images sepia added

--- a/drop-menu.html
+++ b/drop-menu.html
@@ -9,7 +9,7 @@
 </head>
 <body class="dropMenu">
     <header class="dropMenu__header">
-        <div class="dropMenu__header__close header__body">
+        <div class="dropMenu__header__close header__body sepia__filter">
             <button class="dropMenu__header__closeButton" type="button">
                 <img src="images/close.png" alt="close">
             </button>
@@ -23,7 +23,7 @@
                 </div>
             </a>
         </div>
-        <div class="dropMenu__header__search header__body">
+        <div class="dropMenu__header__search header__body sepia__filter">
             <button class="dropMenu__header__checkstatus--button">
                 <img src="images/checkstatus.png" alt="check">
             </button>
@@ -51,17 +51,17 @@
     <footer class="dropMenu__footer">
         <div class="dropMenu__footer__contact ">
             <div class="dropMenu__footer__contact__icons middlegroup">
-                <div class="dropMenu__footer__contact__icons__phone">
+                <div class="dropMenu__footer__contact__icons__phone sepia__filter">
                     <button class="dropMenu__footer__contact__icons__phone__button">
                         <img src="images/call.png" alt="call">
                     </button>
                 </div>
-                <div class="dropMenu__footer__contact__icons__chat">
+                <div class="dropMenu__footer__contact__icons__chat sepia__filter">
                     <button class="dropMenu__footer__contact__icons__chat__button">
                         <img src="images/chat.png" alt="chat">
                     </button>
                 </div>
-                <div class="dropMenu__footer__contact__icons__contacts">
+                <div class="dropMenu__footer__contact__icons__contacts sepia__filter">
                     <button class="dropMenu__footer__contact__icons__contacts__button">
                         <img src="images/profile.png" alt="profile">
                     </button>
