--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/swiper/swiper-bundle.min.css"
+    />
     <link rel="stylesheet" href="style.css">
     <title>CPS</title>
 </head>
@@ -117,56 +121,100 @@
         <div class="brandsRepair__list">
             <input type="checkbox" class="brandsRepair__list__readmore" id="readmore__checker">
             <div class="brandsRepair__list__limiter">
-                <div class="brandsRepair__list__content">
-                    <button class="brandsRepair__list__lenovo">
-                        <img src="images/lenovo.png" alt="lenovo" class="brandsRepair__list__lenovo__img">
-                        <img src="images/go.png" alt="go" class="brandsRepair__list__goButton">
-                    </button>
-                    <button class="brandsRepair__list__samsung">
-                        <img src="images/samsung.png" alt="samsung" class="brandsRepair__list__samsung__img">
-                        <img src="images/go.png" alt="go" class="brandsRepair__list__goButton">
-                    </button>
-                    <button class="brandsRepair__list__apple">
-                        <img src="images/apple.png" alt="apple" class="brandsRepair__list__apple__img">
-                        <img src="images/go.png" alt="go" class="brandsRepair__list__goButton">
-                    </button>
-                    <button class="brandsRepair__list__viewsonic">
-                        <img src="images/viewsonic.png" alt="viewsonic" class="brandsRepair__list__viewsonic__img">
-                        <img src="images/go.png" alt="go" class="brandsRepair__list__goButton">
-                    </button>
-                    <button class="brandsRepair__list__bosch">
-                        <img src="images/bosch.png" alt="bosch" class="brandsRepair__list__bosch__img">
-                        <img src="images/go.png" alt="go" class="brandsRepair__list__goButton">
-                    </button>
-                    <button class="brandsRepair__list__hp">
-                        <img src="images/hp.png" alt="hp" class="brandsRepair__list__hp__img">
-                        <img src="images/go.png" alt="go" class="brandsRepair__list__goButton">
-                    </button>
-                    <button class="brandsRepair__list__acer">
-                        <img src="images/acer.png" alt="acer" class="brandsRepair__list__acer__img">
-                        <img src="images/go.png" alt="go" class="brandsRepair__list__goButton">
-                    </button>
-                    <button class="brandsRepair__list__sony">
-                        <img src="images/sony.png" alt="sony" class="brandsRepair__list__sony__img">
-                        <img src="images/go.png" alt="go" class="brandsRepair__list__goButton">
-                    </button>
-                    <button class="brandsRepair__list__brand1">
-                        <img src="images/lenovo.png" alt="brand1" class="brandsRepair__list__brand1__img">
-                        <img src="images/go.png" alt="go" class="brandsRepair__list__goButton">
-                    </button>
-                    <button class="brandsRepair__list__brand2">
-                        <img src="images/samsung.png" alt="brand2" class="brandsRepair__list__brand2__img">
-                        <img src="images/go.png" alt="go" class="brandsRepair__list__goButton">
-                    </button>
-                    <button class="brandsRepair__list__brand3">
-                        <img src="images/apple.png" alt="brand3" class="brandsRepair__list__brand3__img">
-                        <img src="images/go.png" alt="go" class="brandsRepair__list__goButton">
-                    </button>
-                </div>
+                    <div class="brandsRepair__list__content swiper mySwiper">
+                        <div class="swiper-wrapper">
+                            <div class="swiper-slide">
+                                <button class="brandsRepair__list__lenovo">
+                                    <img src="images/lenovo.png" alt="lenovo" class="brandsRepair__list__lenovo__img">
+                                    <img src="images/go.png" alt="go" class="brandsRepair__list__goButton">
+                                </button>
+                            </div>
+                            <div class="swiper-slide">
+                                <button class="brandsRepair__list__samsung">
+                                    <img src="images/samsung.png" alt="samsung" class="brandsRepair__list__samsung__img">
+                                    <img src="images/go.png" alt="go" class="brandsRepair__list__goButton">
+                                </button>
+                            </div>
+                            <div class="swiper-slide">
+                                <button class="brandsRepair__list__apple">
+                                    <img src="images/apple.png" alt="apple" class="brandsRepair__list__apple__img">
+                                    <img src="images/go.png" alt="go" class="brandsRepair__list__goButton">
+                                </button>
+                            </div>
+                            <div class="swiper-slide">
+                                <button class="brandsRepair__list__viewsonic">
+                                    <img src="images/viewsonic.png" alt="viewsonic" class="brandsRepair__list__viewsonic__img">
+                                    <img src="images/go.png" alt="go" class="brandsRepair__list__goButton">
+                                </button>
+                            </div>
+                            <div class="swiper-slide">
+                                <button class="brandsRepair__list__bosch">
+                                    <img src="images/bosch.png" alt="bosch" class="brandsRepair__list__bosch__img">
+                                    <img src="images/go.png" alt="go" class="brandsRepair__list__goButton">
+                                </button>
+                            </div>
+                            <div class="swiper-slide">
+                                <button class="brandsRepair__list__hp">
+                                    <img src="images/hp.png" alt="hp" class="brandsRepair__list__hp__img">
+                                    <img src="images/go.png" alt="go" class="brandsRepair__list__goButton">
+                                </button>
+                            </div>
+                            <div class="swiper-slide">
+                                <button class="brandsRepair__list__acer">
+                                    <img src="images/acer.png" alt="acer" class="brandsRepair__list__acer__img">
+                                    <img src="images/go.png" alt="go" class="brandsRepair__list__goButton">
+                                </button>
+                            </div>
+                            <div class="swiper-slide">
+                                <button class="brandsRepair__list__sony">
+                                    <img src="images/sony.png" alt="sony" class="brandsRepair__list__sony__img">
+                                    <img src="images/go.png" alt="go" class="brandsRepair__list__goButton">
+                                </button>
+                            </div>
+                            <div class="swiper-slide">
+                                <button class="brandsRepair__list__brand1">
+                                    <img src="images/lenovo.png" alt="brand1" class="brandsRepair__list__brand1__img">
+                                    <img src="images/go.png" alt="go" class="brandsRepair__list__goButton">
+                                </button>
+                            </div>
+                            <div class="swiper-slide">
+                                <button class="brandsRepair__list__brand2">
+                                    <img src="images/samsung.png" alt="brand2" class="brandsRepair__list__brand2__img">
+                                    <img src="images/go.png" alt="go" class="brandsRepair__list__goButton">
+                                </button>
+                            </div>
+                            <div class="swiper-slide">
+                                <button class="brandsRepair__list__brand3">
+                                    <img src="images/apple.png" alt="brand3" class="brandsRepair__list__brand3__img">
+                                    <img src="images/go.png" alt="go" class="brandsRepair__list__goButton">
+                                </button>
+                            </div>
+                            <div class="clearfix"></div>
+                        </div>
+                        <div class="swiper-pagination"></div>
+                      </div>
+                    <div class="swiper-pagination"></div>
             </div>
             <label for="readmore__checker" class="brandsRepair__list__readmore__button"></label>
         </div>
     </section>
+
+    <!--**************************************************-->
+    <div class="brandsRepair__list__grid">
+
+    </div>
+
+    <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+    <script>
+        
+        var swiper = new Swiper(".mySwiper", {
+          pagination: {
+            el: ".swiper-pagination",
+          },
+        });
+      </script>
+    <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
 </body>
 
 </html>
+
