--- a/index.html
+++ b/index.html
@@ -63,8 +63,6 @@
     <div class="background">
         <div class="title">
             <h1>Услуги и сервисы</h1>
-
-            <!--непонятная говнина/// наверное можно переделать-->
             <div class="hidden__buttons">
                 <div class="hidden__buttons--repair">
                     <button class="hidden__buttons--button--repair">
@@ -80,8 +78,6 @@
                 </div>
             </div>
         </div>
-        <!-- ///////////////////////////////////////////////////////////-->
-
         <div class="sidemenu">
             <button class="sidemenu__rbrands">Ремонтируемые бренды</button>
             <button class="sidemenu__rdevices">Ремонтируемые устройства</button>
@@ -254,6 +250,89 @@
         </div>          
     </section>
     <!--**************************************************-->
+    <section class="devicesRepair">
+        <div class="devicesRepair__title">
+            <h2 class="devicesRepair__title__text">
+                Ремонт различных видов техники
+            </h2>
+        </div>
+        <div class="devicesRepair__list">
+            <div class="devicesRepair__list__content swiper mySwiper">
+                <div class="swiper-wrapper">
+                    <div class="swiper-slide">
+                        <button class="devicesRepair__list__1">
+                            <h6 class="devicesRepair__list__title">Ремонт ноутбуков</h6>
+                            <img src="images/go.png" alt="go" class="devicesRepair__list__goButton">
+                        </button>
+                    </div>
+                    <div class="swiper-slide">
+                        <button class="devicesRepair__list__2">
+                            <h6 class="devicesRepair__list__title">Ремонт планшетов</h6>
+                            <img src="images/go.png" alt="go" class="devicesRepair__list__goButton">
+                        </button>
+                    </div>
+                    <div class="swiper-slide">
+                        <button class="devicesRepair__list__3">
+                            <h6 class="devicesRepair__list__title">Ремонт ПК</h6>
+                            <img src="images/go.png" alt="go" class="devicesRepair__list__goButton">
+                        </button>
+                    </div>
+                    <div class="swiper-slide">
+                        <button class="devicesRepair__list__4">
+                            <h6 class="devicesRepair__list__title">Ремонт  мониторов</h6>
+                            <img src="images/go.png" alt="go" class="devicesRepair__list__goButton">
+                        </button>
+                    </div>
+                    <div class="swiper-slide">
+                        <button class="devicesRepair__list__5">
+                            <h6 class="devicesRepair__list__title">Ремонт колонок</h6>
+                            <img src="images/go.png" alt="go" class="devicesRepair__list__goButton">
+                        </button>
+                    </div>
+                    <div class="swiper-slide">
+                        <button class="devicesRepair__list__6">
+                            <h6 class="devicesRepair__list__title">Ремонт телефонов</h6>
+                            <img src="images/go.png" alt="go" class="devicesRepair__list__goButton">
+                        </button>
+                    </div>
+                </div>
+                <div class="swiper-pagination"></div>
+            </div>
+        </div>
+        <div class="devicesRepair__list__grid">
+            <input type="checkbox" class="devicesRepair__list__grid__readmore" id="readmore__checker2">
+            <div class="devicesRepair__list__grid__limiter">
+                <div class="devicesRepair__list__grid__content">
+                    <button class="devicesRepair__list__1">
+                        <h6 class="devicesRepair__list__title">Ремонт ноутбуков</h6>
+                        <img src="images/go.png" alt="go" class="devicesRepair__list__goButton">
+                    </button>
+                    <button class="devicesRepair__list__2">
+                        <h6 class="devicesRepair__list__title">Ремонт планшетов</h6>
+                        <img src="images/go.png" alt="go" class="devicesRepair__list__goButton">
+                    </button>
+                    <button class="devicesRepair__list__3">
+                        <h6 class="devicesRepair__list__title">Ремонт ПК</h6>
+                        <img src="images/go.png" alt="go" class="devicesRepair__list__goButton">
+                    </button>
+                    <button class="devicesRepair__list__4">
+                        <h6 class="devicesRepair__list__title">Ремонт  мониторов</h6>
+                        <img src="images/go.png" alt="go" class="devicesRepair__list__goButton">
+                    </button>
+                    <button class="devicesRepair__list__5">
+                        <h6 class="devicesRepair__list__title">Ремонт колонок</h6>
+                        <img src="images/go.png" alt="go" class="devicesRepair__list__goButton">
+                    </button>
+                    <button class="devicesRepair__list__6">
+                        <h6 class="devicesRepair__list__title">Ремонт телефонов</h6>
+                        <img src="images/go.png" alt="go" class="devicesRepair__list__goButton">
+                    </button>
+                </div>
+            </div>
+            <label for="readmore__checker2" class="devicesRepair__list__grid__readmore__button"></label>
+        </div>
+
+    </section>
     </div>
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
     <script>
