--- a/index.html
+++ b/index.html
@@ -331,7 +331,125 @@
             </div>
             <label for="readmore__checker2" class="devicesRepair__list__grid__readmore__button"></label>
         </div>
-
+    </section>
+    <section class="priceList">
+        <div class="priceList__title">
+            <h2 class="priceList__title__text">
+                Цены на услуги
+            </h2>
+        </div>
+        <div class="priceList__list">
+            <div class="priceList__list__content Swiper mySwiper">
+                <div class="swiper-wrapper">
+                    <div class="swiper-slide">
+                        <div class="swiper-slide__container">
+                            <h6 class="priceList__list__content__title">Ремонтные услуги</h6>
+                            <div class="priceList__list__content__description">Диагностика</div>
+                            <h6 class="priceList__list__content__title">Цена</h6>
+                            <div class="priceList__list__content__price">Бесплатно</div>
+                            <h6 class="priceList__list__content__title">Срок</h6>
+                            <div class="priceList__list__content__time">30 мин</div>
+                            <button class="priceList__list__content__button">
+                                <img src="/images/getit.png" alt="getit">
+                            </button>
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="swiper-slide__container">
+                            <h6 class="priceList__list__content__title">Ремонтные услуги</h6>
+                            <div class="priceList__list__content__description">Замена дисплея</div>
+                            <h6 class="priceList__list__content__title">Цена</h6>
+                            <div class="priceList__list__content__price">1 000 ₽</div>
+                            <h6 class="priceList__list__content__title">Срок</h6>
+                            <div class="priceList__list__content__time">30-120 мин</div>
+                            <button class="priceList__list__content__button">
+                                <img src="/images/getit.png" alt="getit">
+                            </button>
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="swiper-slide__container">
+                            <h6 class="priceList__list__content__title">Ремонтные услуги</h6>
+                            <div class="priceList__list__content__description">Замена полифонического динамика</div>
+                            <h6 class="priceList__list__content__title">Цена</h6>
+                            <div class="priceList__list__content__price">1 000 ₽</div>
+                            <h6 class="priceList__list__content__title">Срок</h6>
+                            <div class="priceList__list__content__time">30-120 мин</div>
+                            <button class="priceList__list__content__button">
+                                <img src="/images/getit.png" alt="getit">
+                            </button>
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="swiper-slide__container">
+                            <h6 class="priceList__list__content__title">Ремонтные услуги</h6>
+                            <div class="priceList__list__content__description">Тестирование с выдачей технического заключения</div>
+                            <h6 class="priceList__list__content__title">Цена</h6>
+                            <div class="priceList__list__content__price">1 000 ₽</div>
+                            <h6 class="priceList__list__content__title">Срок</h6>
+                            <div class="priceList__list__content__time">30-120 мин</div>
+                            <button class="priceList__list__content__button">
+                                <img src="/images/getit.png" alt="getit">
+                            </button>
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="swiper-slide__container">
+                            <h6 class="priceList__list__content__title">Ремонтные услуги</h6>
+                            <div class="priceList__list__content__description">Замена программного обеспечения</div>
+                            <h6 class="priceList__list__content__title">Цена</h6>
+                            <div class="priceList__list__content__price">1 000 ₽</div>
+                            <h6 class="priceList__list__content__title">Срок</h6>
+                            <div class="priceList__list__content__time">30-120 мин</div>
+                            <button class="priceList__list__content__button">
+                                <img src="/images/getit.png" alt="getit">
+                            </button>
+                        </div>
+                    </div>
+                </div>
+                <div class="swiper-pagination"></div>
+            </div>
+        </div>
+        <div class="priceList__list__grid">
+            <div class="priceList__list__grid__container">
+                <div class="priceList__list__grid__header">
+                    <div class="priceList__list__grid__title firstCol">Ремонтные услуги</div>
+                    <div class="priceList__list__grid__price secondCol">Цена</div>
+                    <div class="priceList__list__grid__time">Срок</div>
+                    <button class="hidden"><img src="/images/getit.png" alt="getit"></button>
+                </div>
+                <div class="priceList__list__grid__row1">
+                    <div class="firstCol">Диагностика</div>
+                    <div class="secondCol">Бесплатно</div>
+                    <div>30 мин</div>
+                    <button><img src="/images/getit.png" alt="getit"></button>
+                </div>
+                <div class="priceList__list__grid__row2">
+                    <div class="firstCol">Замена дисплея</div>
+                    <div class="secondCol">1 000 ₽</div>
+                    <div>30-120 мин</div>
+                    <button><img src="/images/getit.png" alt="getit"></button>
+                </div>
+                <div class="priceList__list__grid__row3">
+                    <div class="firstCol">Замена полифонического динамика</div>
+                    <div class="secondCol">1 000 ₽</div>
+                    <div>30-120 мин</div>
+                    <button><img src="/images/getit.png" alt="getit"></button>
+                </div>
+                <div class="priceList__list__grid__row4">
+                    <div class="firstCol">Тестирование с выдачей технического заключения</div>
+                    <div class="secondCol">1 000 ₽</div>
+                    <div>30-120 мин</div>
+                    <button><img src="/images/getit.png" alt="getit"></button>
+                </div>
+                <div class="priceList__list__grid__row5">
+                    <div class="firstCol">Замена программного обеспечения</div>
+                    <div class="secondCol">1 000 ₽</div>
+                    <div>30-120 мин</div>
+                    <button><img src="/images/getit.png" alt="getit"></button>
+                </div>
+            </div>
+        </div>
     </section>
     </div>
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
