--- a/drop-menu.html
+++ b/drop-menu.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="style.css">
     <title>dropMenu</title>
 </head>
-<body class="dropMenu">
-    <header class="dropMenu__header">
+<section class="dropMenu">
+    <div class="dropMenu__header">
         <div class="dropMenu__header__close header__body sepia__filter">
             <button class="dropMenu__header__closeButton" type="button">
                 <img src="images/close.png" alt="close">
@@ -28,8 +28,8 @@
                 <img src="images/checkstatus.png" alt="check">
             </button>
         </div>
-    </header>
-    <main class="dropMenu__main">
+    </div>
+    <div class="dropMenu__main">
         <li class="fix"></li>
         <li><a href="" class="dropMenu__main__grey" style="color:#7E7E82;"
             data-hover="Ремонт техники">Ремонт техники</a></li>
@@ -47,8 +47,8 @@
             data-hover="Наши сервисные центры">Наши сервисные центры</a></li>
         <li><a href="" 
             data-hover="Контакты">Контакты</a></li>
-    </main>
-    <footer class="dropMenu__footer">
+        </div>
+    <div class="dropMenu__footer">
         <div class="dropMenu__footer__contact ">
             <div class="dropMenu__footer__contact__icons middlegroup">
                 <div class="dropMenu__footer__contact__icons__phone sepia__filter">
@@ -85,6 +85,6 @@
                 <button class="dropMenu__footer__lang__CH__button">CH</button>
             </div>
         </div>
-    </footer>
-</body>
+    </div>
+</section>
 </html>
