--- a/index.html
+++ b/index.html
@@ -563,8 +563,8 @@
             <div class="popupRs__content">
                 <div class="popupRs__content__header">
                     <div class="popupRs__content__header sepia__filter">
-                        <a href="" class="popupRs__content__header__closeButton">
-                            <img src="images/close.png" alt="close">
+                        <a href="" class="popupRs__content__header__closeButton close-popup">
+                            <img src="images/close.png" alt="close" class="close-popup">
                         </a>
                     </div>
                     <h2 class="popupRs__content__header__text">Обратная связь</h2>
@@ -585,7 +585,7 @@
                         </div>
                         <div class="popupRs__content__main__license">
                             Нажимая “отправить”, вы даете согласие на 
-                            <a href="">обработку персональных данных</a>и соглашаетесь с нашей 
+                            <a href="">обработку персональных данных</a> и соглашаетесь с нашей 
                             <a href=""> политикой конфиденциальности</a>
                         </div>
                         <button class="popupRs__content__main__submit sepia__filter">
@@ -601,15 +601,15 @@
         <div class="modalCall__wrapper popup popupRs" id="mCall">
             <div class="modalCall__header__content">
                 <div class="modalCall__content__header">
-                    <a href="" class="modalCall__header__closeButton">
-                        <img src="images/close.png" alt="close">
+                    <a href="" class="modalCall__header__closeButton close-popup">
+                        <img src="images/close.png" alt="close" class="close-popup">
                     </a>
                     <div class="modalCall__content__header__text">Заказать звонок</div>
                 </div>
                 <div class="modalCall__body">
                     <input type="tel" placeholder="Телефон">
                     <div class="modalCall__body__text">Нажимая “отправить”, вы даете согласие на
-                        <a href=""> обработку персональных данных и</a>соглашаетесь с нашей
+                        <a href=""> обработку персональных данных </a> и соглашаетесь с нашей
                         <a href=""> политикой конфиденциальности </a>
                     </div>
                     <button class="popupRs__content__main__submit sepia__filter">
